<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_logoapp"
        android:layout_width="match_parent"
        android:layout_height="286dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:src="@drawable/logo_app" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:ems="16"
        android:inputType="textPersonName"
        android:hint="@string/hint_username"
        android:background="@drawable/my_edittext"
        android:layout_margin="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:ems="16"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:background="@drawable/my_edittext"
        android:layout_margin="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"/>

    <TextView
        android:id="@+id/tv_forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tv_forgotpassword"
        android:paddingLeft="45dp"
        android:textSize="18dp"
        android:textStyle="italic"
        android:textColor="#A35161"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:text="@string/btn_login"
        android:textSize="20dp"
        app:backgroundTint="@null"
        />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="OR"
        android:textStyle="bold"
        android:textSize="18dp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:text="@string/btn_register"
        android:textSize="20dp"
        app:backgroundTint="@null"/>

</LinearLayout>